[package]
name = "bt_analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features=false, features = ["json","hickory-dns","rustls-tls"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
select = "0.6"
scraper = "0.19.0"
chrono = {version = "0.4.38", features = ["serde"]}
serde = {version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio","postgres","migrate","chrono"] }
openssl = { version = "0.10.59", features = ["vendored"] }
